tests/valid-gd-scripts/docstrings.gd
"""docstr1
"""

"docstr2"

'docstr3'
