tests/invalid-gd-scripts/docstrings.gd
"""docstr1
"""

"docstr2"

'docstr3'

'''docstr4'''
